--- a/gb/19/1/16/n10979398.md
+++ b/gb/19/1/16/n10979398.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jbnpp2467/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何向孩子解释学习数学的意义</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/Fotolia_67548484_Subscription_L-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/Fotolia_67548484_Subscription_L.jpg" />
 <h6>向学生或孩子解释学习数学的意义，可以激发他们的兴趣和潜能。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2019年01月16日讯】（大纪元记者伊琏澳洲悉尼编译报导）<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>们常常会对<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A6%E6%95%B0%E5%AD%A6.md#1">学数学</a>的意义感到困惑，经常问：“学数学有什么用？”，“我什么时候会用到数学？”，或者是“数学在今后的生活中如何帮助我？”等等。对于提问的孩子们来说，似乎数学与生活没大关系，只是课堂上的一些知识而已。</p>
-<p>报告显示，年轻人对数学的<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E8%B4%9F%E9%9D%A2%E6%83%85%E7%BB%AA.md#1">负面情绪</a>正在上升，即便是在小学阶段也是一样。昆士兰格林菲斯大学（Griffith University）的数学教育讲师拉尔金（Kevin Larkin）认为，这是因为数学在很大程度上只是当做一种菜谱来教授。举例来说，如果我们照着先A然后B再C这样一路做下去后得出了一个问题的答案，但我们并没有首先提出这个问题，对解决问题的“原料”也不求甚解。</p>
-<p>如何向学生或<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>解释<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>数学的意义，激发他们的兴趣和潜能，拉尔金分享了自己的经验。</p>
+<p>【大纪元2019年01月16日讯】（大纪元记者伊琏澳洲悉尼编译报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>们常常会对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E6%95%B0%E5%AD%A6.md#1">学数学</a>的意义感到困惑，经常问：“学数学有什么用？”，“我什么时候会用到数学？”，或者是“数学在今后的生活中如何帮助我？”等等。对于提问的孩子们来说，似乎数学与生活没大关系，只是课堂上的一些知识而已。</p>
+<p>报告显示，年轻人对数学的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%9F%E9%9D%A2%E6%83%85%E7%BB%AA.md#1">负面情绪</a>正在上升，即便是在小学阶段也是一样。昆士兰格林菲斯大学（Griffith University）的数学教育讲师拉尔金（Kevin Larkin）认为，这是因为数学在很大程度上只是当做一种菜谱来教授。举例来说，如果我们照着先A然后B再C这样一路做下去后得出了一个问题的答案，但我们并没有首先提出这个问题，对解决问题的“原料”也不求甚解。</p>
+<p>如何向学生或<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>解释<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>数学的意义，激发他们的兴趣和潜能，拉尔金分享了自己的经验。</p>
 <h2>一、“我什么时候会用到数学”？</h2>
 <p>学校里所教授的数学在很大程度上是基于对计算技能的传授，比如：计算角度，或套用公式来计算体积或容积，而非从本质上研究数学究竟是什么。</p>
 <p>数学是对模式的研究，是对事物的数量、形状、关系进行表达、做出描述等等的一种手段。在现实当中对许多学生来说，他们对数学的理解意味着只是完成老师布置的作业，而非是拓展他们自己对角度、体积、容积的真正理解。</p>
 <p>我用弹钢琴打比喻来说明对数学的认识，即演奏者虽然知道钢琴的一些相关知识（如：琴键、音符、弦乐等），但这并不能让他成为莫扎特，同样，了解资料、公式、定义虽然非常重要，但却不能使某人成为数学家。</p>
 <p>当孩子们并非简单的为完成作业而研习数学时就会发现，数学具有趣味性、相关性和吸引力，数学还会对生产力和就业机会带来长远的经济影响。</p>
-<p>说到数学的<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>方法，老师还可以通过在教学之外为学生找到学习数学的机会，而非只是照本宣科似的讲授数学，父母则可以鼓励孩子在每天的环境中思考和运用数学。</p>
+<p>说到数学的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>方法，老师还可以通过在教学之外为学生找到学习数学的机会，而非只是照本宣科似的讲授数学，父母则可以鼓励孩子在每天的环境中思考和运用数学。</p>
 <p>举例，在旅行时，儿童可以在车牌号中找到模式（连续的345或单独的257，以及（12的）平方数字144）。他们可能会预测哪条路线在移动设备上显示的是最短途径，或者在看他们最爱的电视节目时计算广告插播的次数。</p>
 <h2>二、“数学在今后的生活中如何帮我？”</h2>
 <p>由于学校只关注学习计算技能，而非是解决现实问题，因此不鼓励年轻人在这方面进一步发展。过分强调数学技能会损害年轻人用数学家思维（推理、解决问题、建模、使用技术）解决问题的能力，并进一步使高中或大学学习数学科目人数的下降。</p>
@@ -26,48 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/4/26/n9076112.md#1">澳洲学生对从事数学领域工作“极其”缺乏兴趣</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/10/23/n9762674.md#1">一道小学数学题答案有争议 百万人都算错？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/1/4/n10024877.md#1">如何回答孩子问：“干嘛要学数学？”的提问</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/23/n10419837.md#1">家长和老师如何帮助孩子学习数学</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/2/n10610761.md#1">珀斯数学家获“数学诺贝尔奖”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/29/n10676766.md#1">安省6年级学生数学过半不达标?“发现数学课程”或废除</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/3/n10759031.md#1">安省小学生数学成绩持续下降 出路在哪里？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/11/18/n10859747.md#1">孩子数学成绩下滑 学校和家长该怎么办？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949461.md#1">孩子迷上YouTube 父母当如何应对</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949426.md#1">大学生提高阅读能力要诀</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/4/26/n9076112.md#1">澳洲学生对从事数学领域工作“极其”缺乏兴趣</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/23/n9762674.md#1">一道小学数学题答案有争议 百万人都算错？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/4/n10024877.md#1">如何回答孩子问：“干嘛要学数学？”的提问</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/23/n10419837.md#1">家长和老师如何帮助孩子学习数学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/2/n10610761.md#1">珀斯数学家获“数学诺贝尔奖”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/29/n10676766.md#1">安省6年级学生数学过半不达标?“发现数学课程”或废除</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/3/n10759031.md#1">安省小学生数学成绩持续下降 出路在哪里？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/18/n10859747.md#1">孩子数学成绩下滑 学校和家长该怎么办？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11951225.md#1">【现场视频】哈尔滨某社区再现马褂们</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/19/n11952797.md#1">【现场视频】风吹保护套卷轿车 几百户面临火灾</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11951176.md#1">【现场视频】惠州工地大喇叭巡视：不要出门</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947465.md#1">【抗疫家务通】这5类食物 进微波炉可能伤人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947138.md#1">92岁嬷像一幅画 隐居35年成世界最受憧憬女人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/16/n10979398.htm">如何向孩子解释学习数学的意义</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/16/n10979398.htm">如何向孩子解释学习数学的意义</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jbnpp2467/djy/blob/master/gb/19/1/16/n10979398.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/1/16/n10979398.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
